Grace/tests/gibbs/errors/t282.grace
// ERROR = P1001
var negative := -.
